chore: add initial meta tags for SEO

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Ivan Bandilla's portfolio: junior backend developer specializing in web application development, performance optimization, and data integrity." />
+  <meta property="og:title" content="Ivan Bandilla Web Portfolio" />
+  <meta property="og:description"
+    content="Showcasing projects, skills, and experience in backend development and web technologies." />
+  <meta property="og:image" content="/og-image.png" />
+  <meta property="og:type" content="website" />
   <title>Ivan Bandilla Web Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
