chore: add theme color meta tags

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+  <meta name="theme-color" content="#72e3ad" media="(prefers-color-scheme: light)" />
+  <meta name="theme-color" content="#006239" media="(prefers-color-scheme: dark)" />
+
+
 </head>
 
 <body class="">
